# vulkan_renderer

./: Cargo.toml  README.md
shaders/: shader.frag  shader.vert
src/: buffer.rs  camera.rs  debug.rs  fae.rs  instance_device_queues.rs  main.rs  model.rs  pools_and_command_buffers.rs  render_pass_and_pipeline.rs  surface.rs  swapchain.rs
