[package]
name = "vulkan_renderer"
version = "0.1.0"
authors = ["Jordan Tully <jtullyoops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
winit = "0.22.2"
winapi = "0.3.9"
vk-shader-macros = "0.2.6"
vk-mem = "0.2.2"
nalgebra = "0.22.0"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
